fixing gap for tablet2

--- a/client/styles/Home.module.scss
+++ b/client/styles/Home.module.scss
@@ -37,10 +37,6 @@
     &__container {
       width: 50%;
     }
-
-    &__postsSection {
-      row-gap: 4rem;
-    }
   }
 }
 @include large() {
